designed the primal dashboard with static content

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Comic Neue", cursive;
+  font-family: "Poppins", cursive;
 
   -moz-osx-font-smoothing: grayscale;
 }
