--- a/client/src/components/pages/post.styles.scss
+++ b/client/src/components/pages/post.styles.scss
@@ -3,10 +3,12 @@
   display: flex;
   font-family: "Poppins";
   width: 100vw;
-  height: 100vh;
+  flex-direction: column;
+  height: 100%;
   background: #9f85ff;
   color: #fff;
   justify-content: center;
+  align-items: center;
   &__compose {
     margin-top: 4em;
     display: flex;
@@ -24,6 +26,50 @@
       background: white;
       box-shadow: 20px 20px 60px #8771d9, -20px -20px 60px #b799ff !important;
       border-radius: 10px;
+    }
+  }
+  &__feed {
+    display: flex;
+    margin-top: 5rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    &__Card {
+      width: 55%;
+      margin-top: 40px;
+      box-shadow: 20px 20px 40px #8771d9, -20px -20px 40px #b799ff !important;
+      border-radius: 3px;
+      margin-bottom: 20px;
+      background: #9f85ff !important;
+      &__heading {
+        padding: 12px;
+        display: flex;
+        margin-bottom: -20px;
+        align-items: center;
+        & img {
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+          resize: "cover";
+          margin-right: 15px;
+        }
+        & p {
+          margin-left: auto;
+          border-bottom: 1px solid white;
+        }
+      }
+      &__body {
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        & img {
+          width: 100%;
+          border-radius: 3px;
+        }
+      }
     }
   }
 }
