--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: "Poppins", cursive;
-
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Nunito";
 }
 
 code {
