--- a/client/src/components/pages/dashboard.styles.scss
+++ b/client/src/components/pages/dashboard.styles.scss
@@ -1,39 +1,94 @@
+.settings_dashboard {
+  font-size: 14px;
+  margin-top: 10px;
+  &:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+}
 .Dashboard {
   display: flex;
-  flex-direction: column;
   width: 100vw;
-  height: 100vh;
-  &__card {
-    margin-top: 1em;
-    width: 95%;
-    height: 50%;
-    align-self: center;
-    background: wheat;
+  background: #e6e6e6;
+  flex-direction: column;
+  & h1 {
+    font-family: "Grenze Gotisch", cursive;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  & h3 {
+    font-family: "Grenze Gotisch", cursive;
+    font-weight: bold;
+  }
+  &__profile {
+    padding: 20px;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    background-image: url("https://images.unsplash.com/photo-1487088678257-3a541e6e3922");
-    background-size: cover;
-    border-radius: 10px;
-    align-items: flex-end;
-    // padding: 10px;
-    &-mini {
-      width: 100%;
-      height: 25%;
-      background-color: rgba(8, 4, 4, 0.445);
-      border-top: 2px solid white;
+    &__heading {
+      margin-top: 30px;
+      padding: 18px;
+      height: 100%;
+      width: 80%;
+      background-color: #e6e6e6;
+      box-shadow: 20px 20px 80px #c4c4c4, -20px -20px 80px #ffffff;
       display: flex;
-      justify-content: space-between;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-      &-cta {
+      border-radius: 12px;
+      &-s1 {
+        display: flex;
+        flex-direction: column;
         height: 100%;
-        padding: 20px;
+        justify-content: space-between;
+        align-items: center;
+        flex: 1.2;
+        & img {
+          max-width: 90%;
+          height: auto;
+          border-radius: 4px;
+          filter: grayscale(100%);
+          &:hover {
+            transition: all 1s ease-in-out;
+            filter: grayscale(0);
+          }
+        }
+      }
+      &-s2 {
+        display: flex;
+        flex-direction: column;
+        flex: 1.1;
+        padding: 12px;
+        & span {
+          font-size: 14px;
+          margin: 5px 0;
+        }
+      }
+      &-s3 {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+      }
+    }
+    &__body {
+      margin-top: 20px;
+      margin-bottom: 40px;
+      padding: 18px;
+      width: 80%;
+      background-color: #e6e6e6;
+      box-shadow: 20px 20px 80px #c4c4c4, -20px -20px 80px #ffffff;
+      border-radius: 12px;
+      & p {
+        font-size: 15px;
       }
     }
   }
-  &__logo {
-    width: 250px;
-    position: absolute;
-    bottom: 150px;
+  &__posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+}
+.list_item {
+  padding: 6px 10px;
+  background-color: #e6e6e6;
 }
