--- a/client/src/components/pages/home.scss
+++ b/client/src/components/pages/home.scss
@@ -16,3 +16,10 @@
     letter-spacing: 2px;
     color: white;
 }
+.card{
+    margin-top:570px;
+    display: flex;
+    background-color:rgba(148, 235, 255, 1);
+    margin-left: 5%;
+    border-radius: 20%;
+}
